ticker not sized properly on mobile... fixing

--- a/v2Mobile.css
+++ b/v2Mobile.css
@@ -156,7 +156,7 @@ h2 {
     font-size: 250%;
     font-family: 'Josefin Sans', sans-serif;
     font-weight: 200;
-    max-width: 618px;
+    width: 660px;
     position: relative;
     left: 50%;
     transform: translate(-50%, 0px); /* 0 */
